--- a/curris/test/resource/test.css
+++ b/curris/test/resource/test.css
@@ -18,3 +18,16 @@ img {
   display: block;
   width: 300px;
 }
+
+table {
+  display: block;
+  width: 100%;
+  overflow: auto;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 6px 13px;
+  border: 1px solid #dfe2e5;
+}
